# map-search-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: mcp_dev_prompt.mdc
config/: config.example.yaml
demo/: MCP_README.md  mcp_server_demo.py
docs/: action_plan.md  development_plan.md  plan.md
src/mcp_search_server/: __main__.py
src/mcp_search_server/core/: server.py
src/mcp_search_server/models/: database.py
src/mcp_search_server/services/: project_service.py
src/mcp_search_server/utils/: github_crawler.py
