[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "mcp-search-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "bs4>=0.0.2",
    "mcp[cli]",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
]


[project.scripts]
mcp-search-server = "mcp_search_server.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/mcp_search_server"]

[tool.hatch.version]
path = "src/mcp_search_server/__init__.py" 
